# src/serverBuilder.ts
@@ -10,9 +10,8 @@ import { collectMetricsExpressMiddleware } from '@map-colonies/prometheus';
 import { Registry } from 'prom-client';
 import type { ConfigType } from '@common/config';
 import { SERVICES } from '@common/constants';
-import { JOB_OPERATIONS_ROUTER_SYMBOL } from './jobOperations/routes/jobOperationsRouter';
+import { RECORDS_ROUTER_SYMBOL } from './records/routes/recordsRouter';
 import { JOB_STATUS_ROUTER_SYMBOL } from './jobStatus/routes/jobStatusRouter';
-import { MODELS_ROUTER_SYMBOL } from './models/routes/modelsRouter';
 import { METADATA_ROUTER_SYMBOL } from './metadata/routes/metadataRouter';
 
 @injectable()
@@ -23,9 +22,8 @@ export class ServerBuilder {
     @inject(SERVICES.CONFIG) private readonly config: ConfigType,
     @inject(SERVICES.LOGGER) private readonly logger: Logger,
     @inject(SERVICES.METRICS) private readonly metricsRegistry: Registry,
-    @inject(JOB_OPERATIONS_ROUTER_SYMBOL) private readonly jobOperationsRouter: Router,
+    @inject(RECORDS_ROUTER_SYMBOL) private readonly recordsRouter: Router,
     @inject(JOB_STATUS_ROUTER_SYMBOL) private readonly jobStatusRouter: Router,
-    @inject(MODELS_ROUTER_SYMBOL) private readonly modelsRouter: Router,
     @inject(METADATA_ROUTER_SYMBOL) private readonly metadataRouter: Router
   ) {
     this.serverInstance = express();
@@ -49,9 +47,8 @@ export class ServerBuilder {
   }
 
   private buildRoutes(): void {
-    this.serverInstance.use('/jobOperations', this.jobOperationsRouter);
+    this.serverInstance.use('/records', this.recordsRouter);
     this.serverInstance.use('/jobStatus', this.jobStatusRouter);
-    this.serverInstance.use('/models', this.modelsRouter);
     this.serverInstance.use('/metadata', this.metadataRouter);
     this.buildDocsRoutes();
   }
